# homelab

./: .copilot-session.md  .dockerignore  .gitattributes  .gitignore  README.md  mise.toml  pyproject.toml
.githooks/: pre-commit
.github/: AUTHORING.md  CUSTOMIZATION.md  actionlint.yaml  copilot-instructions.md  pull_request_template.md  renovate.json
.github/instructions/: dashboards.instructions.md  docs.instructions.md  pr-workflow.instructions.md  python.instructions.md  stacks.instructions.md  testing.instructions.md  workflows.instructions.md
.github/workflows/: ci.yaml  code-review-command.lock.yml  code-review-command.md  code-review.lock.yml  code-review.md  code-review.yaml  deploy.yaml  implement-fix.yaml  implement.yaml
docs/: agent-lifecycle.md  architecture.md  observability.md  requirements.md  roadmap.md  security-review-test.md
docs/decisions/: 001-dokploy.md  002-repo-tooling.md  003-observability.md  004-isolated-review-agent.md  005-ci-access-pattern.md  006-dokploy-gitops.md  007-agent-network-isolation.md  008-documentation-ownership.md  008-worktree-retention.md  009-capped-review-cycle.md  009-single-cycle-review.md  010-agent-security-model.md  011-docker-socket-for-workers.md  012-deploy-pipeline.md  (+6 more)
scripts/: backup-knowledge-db.sh  check-versions.sh  deploy-gate.sh  deploy.sh  detect-stacks.sh  fetch-pr-diff.sh  generate-env.sh  ingest-notes.sh  prepare-deploy-checkout.sh  render_recipe.py  review-pr.sh  sync-dashboards.sh  validate-compose.sh  validate_docs.py
stacks/agents/app/: Dockerfile  auth.py  copilot.py  copilot_cli.py  entrypoint.sh  git.py  github.py  github_app.py  implement.py  logging_config.py  main.py  metrics.py  mise.docker.toml  models.py  pyproject.toml  review.py  runtime_env.py  stats.py  trust.py  worker.py  worktree.py
stacks/agents/app/implement/: __init__.py  orchestrator.py
stacks/agents/app/review/: __init__.py  orchestrator.py
stacks/agents/app/services/: copilot.py  docker.py  git.py  github.py
stacks/agents/app/tests/: conftest.py  test_auth.py  test_copilot.py  test_copilot_cli.py  test_docker.py  test_git.py  test_github.py  test_github_app.py  test_implement.py  test_logging_config.py  test_main.py  test_review.py  test_runtime_env.py  test_trust.py  test_worker.py  test_worktree.py
stacks/knowledge/app/: Dockerfile  pyproject.toml
stacks/knowledge/app/knowledge/: __init__.py  __main__.py  chunker.py  database.py  embeddings.py  ingest.py  links.py  models.py  related.py  save.py  search.py  tokenize.py
stacks/knowledge/app/tests/: test_chunker.py  test_database.py  test_embeddings.py  test_ingest.py  test_links.py  test_main.py  test_models.py  test_related.py  test_save.py  test_search.py  test_tokenize.py
stacks/knowledge/app/tests/fixtures/: chinese_retrieval_eval_queries.json  metr-uplift-update.html  sample_note.md
stacks/knowledge/app/tests/fixtures/mandarin_eval/areas/mandarin/: anki-retention-and-pacing.md  background.md  learning-strategy.md  song-based-character-learning.md  song-vocabulary-priorities.md
stacks/knowledge/app/tests/integration/: test_ingest_e2e.py
tests/: test_health.py  test_security.py
(+58 files in other folders)
