[project]
name = "homelab"
version = "0.1.0"
description = "Infrastructure-as-code and tooling for Colin's homelab"
readme = "README.md"
authors = [
    { name = "Colin Cheung", email = "11246116+ColinCee@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "ty>=0.0.1",
    "yamllint>=1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
