[project]
name = "homelab-knowledge"
version = "0.1.0"
description = "Typed CLI package for the homelab knowledge base"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pgvector>=0.4",
    "pydantic>=2",
    "psycopg[binary]>=3.2",
    "pypdf>=5",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "ty>=0.0.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
